trying to fix about image on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -199,8 +199,10 @@ nav div{
     border-radius: 1.3rem;
 }
 .about-img{
-    max-height: 35rem;
+    max-width: 25rem;
+    max-height: 100%;
     width: auto;
+    height: auto;
     border-radius: 1.3rem;
 }
 .hero-socialIcons{
